--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/rootView"
+    android:orientation="vertical"
     android:layout_height="match_parent"
     android:clipChildren="false">
 
@@ -8,7 +10,7 @@
         android:id="@+id/shadow"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="30dp">
         <TextView
             android:text="测试边界"
@@ -16,6 +18,7 @@
             android:layout_height="wrap_content" />
     </com.spearbothy.shadowview.ShadowView>
     <LinearLayout
+
         android:id="@+id/layout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -95,5 +98,4 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp" />
     </LinearLayout>
-
-</RelativeLayout>
+</LinearLayout>
